--- a/src/main/webapp/WEB-INF/views/people/showPerson.html
+++ b/src/main/webapp/WEB-INF/views/people/showPerson.html
@@ -15,7 +15,8 @@
     <hr/>
     <h3>Книги:</h3>
     <div th:each="book : ${bookList}">
-        <p th:text="${book.getName()} + ', ' + ${book.getAuthor()} + ', ' + ${book.getYear()}"></p>
+        <p th:style="${book.isTimeOver()} ? 'color:red' : 'color:black'"
+           th:text="${book.getName()} + ', ' + ${book.getAuthor()} + ', ' + ${book.getYear()}"></p>
     </div>
 </div>
 
