--- a/src/main/webapp/WEB-INF/views/people/showPerson.html
+++ b/src/main/webapp/WEB-INF/views/people/showPerson.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<p th:text="${person.getFull_name()} + ', ' + ${person.getBirth_year()}"></p>
+<p th:text="${person.getFullName()} + ', ' + ${person.getBirthYear()}"></p>
 
 <br/>
 
